<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree</string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>
    <string name="button_name">Download</string>
    <string name="button_loading">We are loading</string>
    <string name="title_activity_detail">Download Details</string>
    <string name="button_ok_name">OK</string>
    <string name="image_content_description">Download image</string>
    <string name="success">Success</string>
    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="loadApp">LoadApp - Current Repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="noRepoSelectedText">Please select the file to download</string>
    <string name="file_name_title">File Name:</string>
    <string name="download_status_title">Status:</string>
</resources>
